src/component/NavMenu.css
:root {
  --nav-menu-hero: #7e8088;
  --nav-menu-text: var(--app-grad-1-color);
  --nav-menu-text-light: #0a0a0c06;
}

.nav-menu {
  font-size: var(--app-text-size);
  font-family: "DM Mono";
  font-weight: 300;
  position: fixed;
  top: 0%;
  left: 0%;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
  grid-template-rows: 1fr;
  width: 100%;
  margin-top: 0em;
  padding-bottom: 2em;
  padding-left: max((100% - 1400px) / 2, 1em);
  padding-right: max((100% - 1400px) / 2, 1em);
  height: 7em;
  column-gap: 2em;
  align-items: end;
  background-color: var(--nav-menu-hero);
  z-index: 100;
}

.nav-menu-item {
  width: 100%;
  height: 0.5em;
  padding: 0em 0.5em 0em 0.5em;
  text-align: center;
  border-width: 1px;
  border-style: solid;
  border-color: var(--nav-menu-text);
  border-top-color: transparent;
  color: var(--nav-menu-text);
  text-transform: uppercase;
  font-size: 1.5em;
  letter-spacing: -1px;
  display: flex;
  align-items: end;
  justify-content: center;
  position: relative;
  animation-name: flashing;
  animation-duration: 0.8s;
  animation-timing-function: cubic-bezier(0.43, 0.01, 0.67, 0.99);
  animation-iteration-count: infinite;
  animation-direction: alternate;
}

@keyframes flashing {
  from {
    border-color: var(--nav-menu-text);
    border-top-color: transparent;
  }
  to {
    border-color: var(--nav-menu-text-light);
    border-top-color: transparent;
  }
}

.nav-menu-item:hover {
  color: transparent;
  text-shadow: var(--nav-menu-text) 0px 0px 2px;
}

@media only screen and (max-width: 768px) {
  .nav-menu {
    display: none;
  }
}

